WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241628
Tab snapshotting should not trigger the WebGL code path when HAVE(LOW_AV_SAMPLE_BUFFER_PRUNING_INTERVAL) is false
https://bugs.webkit.org/show_bug.cgi?id=241628
Summary
Tab snapshotting should not trigger the WebGL code path when HAVE(LOW_AV_SAMP...
youenn fablet
Reported
2022-06-15 01:35:28 PDT
Tab snapshotting should not trigger the WebGL code path when HAVE(LOW_AV_SAMPLE_BUFFER_PRUNING_INTERVAL) is false
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2022-06-15 01:36:55 PDT
<
rdar://94484791
>
Radar WebKit Bug Importer
Comment 2
2022-06-15 01:37:15 PDT
<
rdar://problem/95182954
>
youenn fablet
Comment 3
2022-06-15 01:45:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1532
youenn fablet
Comment 4
2022-06-15 01:45:38 PDT
<
rdar://94484791
>
EWS
Comment 5
2022-06-16 08:22:55 PDT
Committed
r295594
(
251599@main
): <
https://commits.webkit.org/251599@main
> Reviewed commits have been landed. Closing PR #1532 and removing active labels.
Alexey Proskuryakov
Comment 6
2022-07-12 09:06:42 PDT
***
Bug 242607
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug