Tab snapshotting should not trigger the WebGL code path when HAVE(LOW_AV_SAMPLE_BUFFER_PRUNING_INTERVAL) is false https://bugs.webkit.org/show_bug.cgi?id=241628 rdar://94484791

Patch by Youenn Fablet <youennf@gmail.com> on 2022-06-16
Reviewed by Jer Noble.

If HAVE(LOW_AV_SAMPLE_BUFFER_PRUNING_INTERVAL) is false, we either render the video or we can grab individual video frames for canvas rendering.
We render video except when WebGL canvas painting is used.
Before the patch, the GPUProcess code path was relying on calling MediaPlayerPrivateMediaSourceAVFObjC::videoFrameForCurrentTime for tab snapshotting.
This then prevented the video to be rendered.

This patch is adding a MediaPlayer::willBeAskedToPaintGL method to ask the player to enter the WebGL code path to grab individual video frames.
This method is called when creating a video texture for WebGL.
MediaPlayerPrivateMediaSourceAVFObjC implements this method to switch to the decompression session to grab individual video frames.
Other players are left unchanged.
We add the necessary IPC handling to send the signal from WebProcess to GPUProcess.
All of this is specific to HAVE(LOW_AV_SAMPLE_BUFFER_PRUNING_INTERVAL) being false.

Manually tested by tabsnapshooting youtube pages as well as loading web page using MSE+WebGL.

* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::texImageSourceHelper):
* Source/WebCore/platform/graphics/MediaPlayer.cpp:
(WebCore::MediaPlayer::willBeAskedToPaintGL):
* Source/WebCore/platform/graphics/MediaPlayer.h:
* Source/WebCore/platform/graphics/MediaPlayerPrivate.h:
(WebCore::MediaPlayerPrivateInterface::willBeAskedToPaintGL):
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::willBeAskedToPaintGL):
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::videoFrameForCurrentTime):
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::shouldEnsureLayer const):
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::acceleratedRenderingStateChanged):
* Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.h:
* Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.messages.in:
* Source/WebKit/GPUProcess/media/cocoa/RemoteMediaPlayerProxyCocoa.mm:
(WebKit::RemoteMediaPlayerProxy::willBeAskedToPaintGL):
* Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
(WebKit::MediaPlayerPrivateRemote::willBeAskedToPaintGL):
* Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.h:

Canonical link: https://commits.webkit.org/251599@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295594 268f45cc-cd09-0410-ab3c-d52691b4dbfc